refactoring the codebase, so I could create a bunch of unit tests to test the logic